hard-gists/19d2397ff8da1952556cf2417d965f6c/run.log
=== Docker Run Log for 19d2397ff8da1952556cf2417d965f6c ===
Started at: Mi 29. Okt 12:36:27 CET 2025

[2025-10-29 12:36:28] START: Running container for 19d2397ff8da1952556cf2417d965f6c
[2025-10-29 12:36:28] SUCCESS: Container f5e1f3a38051d62abc3b4a6ae51fcebe13e277121a02ca2682e9f7df6d947530 started for 19d2397ff8da1952556cf2417d965f6c
=== Container logs for 19d2397ff8da1952556cf2417d965f6c ===
  File "/snippet.py", line 23
    print gbr.estimators_.shape[0]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 19d2397ff8da1952556cf2417d965f6c ===
[2025-10-29 12:36:30] INFO: Container f5e1f3a38051d62abc3b4a6ae51fcebe13e277121a02ca2682e9f7df6d947530 has stopped
